# Django_Python_Q6

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
CampusSecondhandShop/: asgi.py  settings.py  urls.py  wsgi.py
Shop/: admin.py  apps.py  context_processors.py  forms.py  models.py  shopping_agent.py  urls.py  views.py
Shop/migrations/: 0001_initial.py  0002_sample_data.py
docs/: python结课大作业任务描述.docx  python课程结课报告.docx  课程考核报告-校园二手交易购物平台.md
static/css/: Shop.css
templates/Shop/: Base.html  Cart.html  CategoryDetail.html  Checkout.html  OrderSuccess.html  ProductCard.html  ProductDetail.html  ProductList.html  ShoppingAssistant.html
